overlays/dev/test-secret-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: secret-checker-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: secret-checker
  ports:
    - port: 80
      targetPort: 3000
